--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="index.css"/>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <title>Todo List</title>
 </head>
@@ -9,8 +10,8 @@
     <div class="center">
         <form id="task-creator">
             <span>
-                <input id="task-input" type="text" name="task" placeholder="Task"/>
-                <button type="submit">Create</button>
+                <input class="input-field" id="task-input" type="text" name="task" placeholder="Task"/>
+                <button class="create-task-btn" type="submit">Create</button>
             </span>
             <ul id="todo-list"></ul>
         </form>
